# aspect-cli

./: .aspectplugins  .bazelignore  .bazeliskrc  .bazelrc  .bazelversion  .editorconfig  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.cjs  .shellcheckrc  ASPECT_COMMUNITY_LICENSE  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  MODULE.aspect  MODULE.bazel  README.md  WORKSPACE  bazel_stamp_info.sh  circleci.py  context.md  go.bzl  go.mod  go.sum  go_proto_library.bzl  nogo_config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rules_go.patch  setup_remote_cache.sh  tidy.sh  workspace_status.sh  (+1 more)
.circleci/: BUILD.bazel  config.yml  output_api_probe.sh  run.py  user-config.yml
axel-f/: BUILD.bazel  Cargo.toml  MODULE.aspect  buildifier.axl  config.axl  configure.axl  delivery.axl  deliveryd.axl  gazelle.axl  platform-config.axl  sarif.axl
axel-f/config/: builtins.axl  delivery.axl  lint.axl
axel-f/docs/: lint-task.md  sarif-translation.md  status.md  what_is_this.md
axel-f/lib/: github.axl  linting.axl  platform.axl
axel-f/src/: lib.rs
axel-f/tasks/: delivery.axl  migrate.axl  warming.axl
bazel/: BUILD.bazel  README.md  defaults.bazelrc  workspace_status.sh
bazel/action_cache/: BUILD.bazel  action_cache.pb.go  action_cache.proto  action_cache_pb.d.ts
bazel/analysis/: BUILD.bazel  analysis_v2.pb.go  analysis_v2.proto  analysis_v2_pb.d.ts
bazel/buildeventstream/: BUILD.bazel  build_event_stream.pb.go  build_event_stream.proto  build_event_stream_pb.d.ts
bazel/command_line/: BUILD.bazel  command_line.pb.go  command_line.proto  command_line_pb.d.ts
bazel/failure_details/: BUILD.bazel  failure_details.pb.go  failure_details.proto  failure_details_pb.d.ts
bazel/flags/: BUILD.bazel  flags.pb.go  flags.proto  flags_pb.d.ts  helpers.go
bazel/go/: BUILD.bazel  write_go_generated_source_files.bzl
bazel/hash/: BUILD.bazel  sha256.bzl
bazel/include/: go.MODULE.bazel  llvm.MODULE.bazel  multitool.MODULE.bazel  musl.MODULE.bazel  proto.MODULE.bazel  python.MODULE.bazel  rust.MODULE.bazel
bazel/invocation_policy/: BUILD.bazel  invocation_policy.pb.go  invocation_policy.proto  invocation_policy_pb.d.ts
bazel/options/: BUILD.bazel  option_filters.pb.go  option_filters.proto  option_filters_pb.d.ts
bazel/packages_metrics/: BUILD.bazel  package_load_metrics.pb.go  package_load_metrics.proto  package_load_metrics_pb.d.ts
bazel/patches/: build_event.patch  go_compiler_flags.patch  toolchains_llvm.patch
bazel/proto/: .bazelrc  BUILD.bazel  MODULE.bazel  descriptor.bzl
bazel/query/: BUILD.bazel  build.pb.go  build.proto  build_pb.d.ts
bazel/release/: BUILD.bazel  hashes.bzl  platforms.bzl  release.bzl
bazel/rust/: README.md  defs.bzl  multi_platform_rust_binaries.bzl
bazel/ts/: defs.bzl
buildinfo/: BUILD.bazel  build_info.go  build_info_test.go  buildinfo.go  buildinfo_test.go  stamp.go  version_writer.go  version_writer_test.go
cmd/: BUILD.bazel  init.go
cmd/aspect/: BUILD.bazel  main.go
cmd/bootstrap/: BUILD.bazel  README.md  main.go
cmd/docgen/: BUILD.bazel  main.go
docs/: BUILD.bazel  _config.yml  aspect.md  aspect_analyze-profile.md  aspect_aquery.md  aspect_build.md  aspect_canonicalize-flags.md  aspect_clean.md  aspect_config.md  aspect_configure.md  aspect_coverage.md  aspect_cquery.md  aspect_docs.md  aspect_dump.md  aspect_fetch.md  aspect_info.md  aspect_init.md  aspect_license.md  aspect_lint.md  aspect_mobile-install.md  aspect_mod.md  aspect_modquery.md  aspect_outputs.md  aspect_print.md  aspect_print_action.md  aspect_pro.md  aspect_query.md  aspect_run.md  aspect_shutdown.md  aspect_support.md  aspect_sync.md  aspect_test.md  aspect_version.md  axl.md  command_list.bzl  delivery.sh  design.md  index.md  lib.md  load.md  (+6 more)
docs/bazelrc/: BUILD.bazel  bazel6.bazelrc  ci.bazelrc  convenience.bazelrc  correctness.bazelrc  doc.go  embed.go  javascript.bazelrc  performance.bazelrc
docs/cli/: index.html
docs/cmd/: aspect-build.md  aspect-check.md  aspect-init.md  aspect-run.md  aspect-test.md  aspect-watch.md
docs/design/: 001-cli-config-structure.md
docs/help/: directives.md  target-syntax.md
docs/lib/: args.md  bazel.md  bool.md  config_context.md  dict.md  float.md  future.md  futures.md  http.md  http_response.md  int.md  json.md  list.md  namespace.md  range.md  remote.md  set.md  std.md  str.md  struct.md  task_context.md  template.md  tuple.md  type.md  typing.md  wasm.md
docs/plugins/: BUILD.bazel  README.md  package.json  plugins.d.ts  plugins.json  plugins.schema.json
exclude/: BUILD.bazel
gazelle/: BUILD.bazel  deps.bzl  gazelle.bzl  main.go
gazelle/bzl/: BUILD.bazel  gazelle.go
gazelle/common/: BUILD.bazel  bazel.go  directives.go  excludes.go  jq.go  regex.go  rules.go  set.go  walk.go
gazelle/host/: BUILD.bazel  README.md  builtin.go  config.go  configure.go  generate.go  host.go  resolver.go
gazelle/js/: BUILD.bazel  README.md  config.go  configure.go  generate.go  generate_test.go  kinds.go  language.go  log.go  parser.go  parser_test.go  resolve.go  target.go  walk.go
gazelle/kotlin/: BUILD.bazel  README.md  configure.go  generate.go  imports.go  kotlin.go  kotlin_test.go  language.go  resolver.go
gazelle/plugins/: BUILD.bazel  bzl.lang.star  kotlin.lang.star  maven.lang.star  x.lang.star.tmpl
gazelle/python/: BUILD.bazel  unix.go
gazelle/runner/: BUILD.bazel  README.md  go_deps.go  runner.go
install/: BUILD.bazel  install.sh  install_test.sh
integration_tests/: BUILD.bazel  bats.bzl  bats_deps.bzl  bazel_binary.bzl  help_test.sh  runner.sh
integration_tests/aspect/: BUILD.bazel  common.bats  configure_test.bats  (+12 more)
release/: BUILD.bazel  README.md  bazel  bazelisk_artifacts.bzl  cli_brew_artifacts.bzl  create_release.sh  hashes.bzl  platforms.bzl  release.bzl  stage_for_dev.sh  verify_homebrew_artifacts.sh  version.tmpl  version_file.bzl
tools/: BUILD.bazel  bazel  bazel-test.sh  bazel.md  install.sh  push_release_tag.sh  rosetta  tools.lock.json  workspace_status.js  wrapper-test.sh
(+2922 files in other folders)
