alias(
    name = "launcher",
    actual = "//crates/aspect-launcher",
)

genrule(
    name = "hello",
    srcs = [],
    outs = ["hello.txt"],
    cmd = "echo 'Hello, World!' > $@",
)

alias(
    name = "cli",
    actual = "//crates/aspect-cli",
)

exports_files([
    "LICENSE",
    "README.md",
])
