# Gazelle directives — applied repo-wide. The `examples/` tree is
# user-facing fixture content (not part of the bazel build) so we
# exclude it from gazelle's BUILD-file generation.
# gazelle:exclude examples

alias(
    name = "launcher",
    actual = "//crates/aspect-launcher",
)

alias(
    name = "cli",
    actual = "//crates/aspect-cli",
)

alias(
    name = "docgen",
    actual = "//crates/axl-docgen",
)

exports_files([
    "LICENSE",
    "README.md",
])
