[patch.crates-io]
starlark = { git = "https://github.com/thesayyn/starlark-rust.git", branch = "bytes_type" }
starlark_derive = { git = "https://github.com/thesayyn/starlark-rust.git", branch = "bytes_type" }
starlark_lsp = { git = "https://github.com/thesayyn/starlark-rust.git", branch = "bytes_type" }
starlark_syntax = { git = "https://github.com/thesayyn/starlark-rust.git", branch = "bytes_type" }
starlark_map = { git = "https://github.com/thesayyn/starlark-rust.git", branch = "bytes_type" }
allocative = { git = "https://github.com/thesayyn/starlark-rust.git", branch = "bytes_type" }
allocative_derive = { git = "https://github.com/thesayyn/starlark-rust.git", branch = "bytes_type" }
dupe = { git = "https://github.com/thesayyn/starlark-rust.git", branch = "bytes_type" }

[workspace]
members = ["crates/*"]
exclude = ["crates/example-tui"]
default-members = ["crates/aspect-cli"]
resolver = "2"

[profile.release]
lto="fat"
codegen-units = 1
opt-level = "z"

[workspace.package]
version = "0.0.0-dev"
categories = ["development-tools"]
homepage = "https://github.com/aspect-build/aspect-cli"
repository = "https://github.com/aspect-build/aspect-cli"
license = "Apache 2"
edition = "2024"
readme = "README.md"
rust-version = "1.88.0"
