[patch.crates-io]
starlark = { git = "https://github.com/aspect-build/starlark-rust", rev = "51e858ab7431782b47d08b67ec4a83151946e7b7" }
starlark_derive = { git = "https://github.com/aspect-build/starlark-rust", rev = "51e858ab7431782b47d08b67ec4a83151946e7b7" }
starlark_lsp = { git = "https://github.com/aspect-build/starlark-rust", rev = "51e858ab7431782b47d08b67ec4a83151946e7b7" }
starlark_syntax = { git = "https://github.com/aspect-build/starlark-rust", rev = "51e858ab7431782b47d08b67ec4a83151946e7b7" }
starlark_map = { git = "https://github.com/aspect-build/starlark-rust", rev = "51e858ab7431782b47d08b67ec4a83151946e7b7" }
allocative = { git = "https://github.com/aspect-build/starlark-rust", rev = "51e858ab7431782b47d08b67ec4a83151946e7b7" }
allocative_derive = { git = "https://github.com/aspect-build/starlark-rust", rev = "51e858ab7431782b47d08b67ec4a83151946e7b7" }
dupe = { git = "https://github.com/aspect-build/starlark-rust", rev = "51e858ab7431782b47d08b67ec4a83151946e7b7" }
display_container = { git = "https://github.com/aspect-build/starlark-rust", rev = "51e858ab7431782b47d08b67ec4a83151946e7b7" }

[workspace]
members = ["crates/*"]
exclude = ["crates/example-tui"]
default-members = ["crates/aspect-cli"]
resolver = "2"

[profile.release]
lto="fat"
codegen-units = 1
opt-level = "z"

[workspace.package]
version = "0.0.0-dev"
categories = ["development-tools"]
homepage = "https://github.com/aspect-build/aspect-cli"
repository = "https://github.com/aspect-build/aspect-cli"
license = "Apache 2"
edition = "2024"
readme = "README.md"
rust-version = "1.88.0"
