load("//bazel/rust:defs.bzl", "rust_library")

rust_library(
    name = "axel-f",
    srcs = glob(["src/**/*.rs"]),
    compile_data = glob([
        "**/*.axl",
        "**/*.aspect",
    ]),
    visibility = [
        "//crates/axl-runtime:__pkg__",
        "//crates/aspect-cli:__pkg__",
    ],
)
