load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

# gazelle:exclude **/*.d.ts

write_source_files(
    name = "write_pb_go",
    additional_update_targets = [
        "//bazel/action_cache:write_pb_go",
        "//bazel/analysis:write_pb_go",
        "//bazel/buildeventstream:write_pb_go",
        "//bazel/command_line:write_pb_go",
        "//bazel/failure_details:write_pb_go",
        "//bazel/flags:write_pb_go",
        "//bazel/invocation_policy:write_pb_go",
        "//bazel/options:write_pb_go",
        "//bazel/packages_metrics:write_pb_go",
        "//bazel/query:write_pb_go",
    ],
)
