load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# Under --stamp, the Go linker will fill in these placeholders with VCS info
# see https://github.com/bazelbuild/rules_go/blob/master/go/core.rst#stamping-with-the-workspace-status-script
_GO_STAMP_X_DEFS = {
    "BuildTime": "{BUILD_TIME}",
    "GitCommit": "{STABLE_BUILD_SCM_SHA}",
    "GitStatus": "{STABLE_BUILD_SCM_LOCAL_CHANGES}",
    "HostName": "{BUILD_HOST}",
    "Release": "{STABLE_BUILD_SCM_TAG}",
}

go_library(
    name = "buildinfo",
    srcs = [
        "buildinfo.go",
        "version_writer.go",
    ],
    importpath = "aspect.build/cli/buildinfo",
    visibility = ["//visibility:public"],
    x_defs = _GO_STAMP_X_DEFS,
)

go_test(
    name = "buildinfo_test",
    srcs = [
        "buildinfo_test.go",
        "version_writer_test.go",
    ],
    deps = [
        ":buildinfo",
        "@com_github_stretchr_testify//assert",
    ],
)
