load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "gazelle",
    srcs = ["gazelle.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_gazelle//:def"],
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/build_defs/repo:http.bzl"],
)
