load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_shell//shell:sh_library.bzl", "sh_library")

go_library(
    name = "configure_lib",
    srcs = ["main.go"],
    importpath = "github.com/aspect-build/aspect-cli/gazelle",
    visibility = ["//visibility:private"],
    deps = [
        "//buildinfo",
        "//gazelle/host",
        "//pkg/aspect/configure",
        "//pkg/aspecterrors",
        "//pkg/ibp",
        "//pkg/ioutils",
        "@bazel_gazelle//language:go_default_library",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_binary(
    name = "bin",
    embed = [":configure_lib"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "gazelle",
    srcs = ["gazelle.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_gazelle//:def"],
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/build_defs/repo:http.bzl"],
)
