load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":bazelisk_artifacts.bzl", "bazelisk_artifacts")
load(":release.bzl", "multi_platform_binaries", "release")

multi_platform_binaries(
    name = "aspect",
    embed = ["//cmd/aspect:aspect_lib"],
    tags = ["manual"],
)

expand_template(
    name = "aspect_version_file",
    out = "aspect_version",
    stamp_substitutions = {
        "0.0.0-PLACEHOLDER": "{{STABLE_ASPECT_CLI_BAZELISK_COMPAT_VERSION}}",
    },
    template = ["0.0.0-PLACEHOLDER"],
)

platform_transition_filegroup(
    name = "aspect-windows-x86_64.exe",
    srcs = ["//cmd/aspect"],
    tags = ["manual"],
    target_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    target_platform = "@zig_sdk//platform:windows_x86_64",
)

platform_transition_filegroup(
    name = "aspect-windows-aarch64.exe",
    srcs = ["//cmd/aspect"],
    tags = ["manual"],
    target_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:aarch64",
    ],
    target_platform = "@zig_sdk//platform:windows_arm64",
)

bazelisk_artifacts(
    name = "windows_artifacts",
    tags = ["manual"],
    version_file = ":aspect_version",
    windows_arm64 = ":aspect-windows-aarch64.exe",
)

bazelisk_artifacts(
    name = "windows_artifacts_arm64",
    tags = ["manual"],
    version_file = ":aspect_version",
    windows_arm64 = ":aspect-windows-aarch64.exe",
)

bazelisk_artifacts(
    name = "linux_and_darwin_artifacts",
    darwin_arm64 = ":aspect-macos-aarch64",
    darwin_x86_64 = ":aspect-macos-x86_64",
    linux_arm64 = ":aspect-linux-aarch64",
    linux_x86_64 = ":aspect-linux-x86_64",
    tags = ["manual"],
    version_file = ":aspect_version",
)

release(
    name = "release",
    tags = ["manual"],
    targets = [
        ":aspect",
        ":linux_and_darwin_artifacts",
    ],
)

release(
    name = "release.windows",
    tags = ["manual"],
    targets = [
        ":aspect-windows-x86_64.exe",
        ":windows_artifacts",
    ],
)

release(
    name = "release.windows-arm64",
    tags = ["manual"],
    targets = [
        ":aspect-windows-aarch64.exe",
        ":windows_artifacts_arm64",
    ],
)

bzl_library(
    name = "platforms",
    srcs = ["platforms.bzl"],
    visibility = ["//visibility:public"],
)
