load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "bazel_proto",
    srcs = ["action_cache.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "bazel_go_proto",
    importpath = "aspect.build/cli/bazel/action_cache",
    proto = ":bazel_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "action_cache",
    embed = [":bazel_go_proto"],
    importpath = "aspect.build/cli/bazel/action_cache",
    visibility = ["//visibility:public"],
)
