load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel/go:write_go_generated_source_files.bzl", "write_go_generated_source_files")
load("//bazel/ts:defs.bzl", "ts_proto_library")

proto_library(
    name = "bazel_proto",
    srcs = ["action_cache.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "bazel_go_proto",
    importpath = "aspect.build/cli/bazel/action_cache",
    proto = ":bazel_proto",
    visibility = ["//visibility:public"],
)

write_go_generated_source_files(
    name = "write_pb_go",
    src = ":bazel_go_proto",
    output_files = [
        "action_cache.pb.go",
    ],
    visibility = ["//bazel:__pkg__"],
)

go_library(
    name = "action_cache",
    embed = [":bazel_go_proto"],
    importpath = "aspect.build/cli/bazel/action_cache",
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "bazel_proto_ts",
    gen_connect_es = False,
    node_modules = "//:node_modules",
    proto = ":bazel_proto",
    visibility = ["//visibility:public"],
)
