load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel/go:write_go_generated_source_files.bzl", "write_go_generated_source_files")

proto_library(
    name = "bazel_proto",
    srcs = ["analysis_v2.proto"],
    visibility = ["//visibility:public"],
    deps = ["//bazel/query:blaze_query_aspect_mirror_proto"],
)

go_proto_library(
    name = "bazel_go_proto",
    importpath = "aspect.build/cli/bazel/analysis",
    proto = ":bazel_proto",
    visibility = ["//visibility:public"],
    deps = ["//bazel/query"],
)

write_go_generated_source_files(
    name = "write_pb_go",
    src = ":bazel_go_proto",
    output_files = [
        "analysis_v2.pb.go",
    ],
    visibility = ["//bazel:__pkg__"],
)

go_library(
    name = "analysis",
    embed = [":bazel_go_proto"],
    importpath = "aspect.build/cli/bazel/analysis",
    visibility = ["//visibility:public"],
)
